--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -21,6 +21,50 @@ body {
   flex-direction: column;
   align-items: center;
 }
+
+nav {
+  position: fixed;
+  display: flex;
+  align-items: center;
+  width: 8rem;
+  height: 100%;
+  overflow: hidden;
+  z-index: 50;
+}
+.nav-item-wrapper {
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+}
+.nav-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 60%;
+  max-width: 3rem;
+  max-height: 700px;
+  min-height: 300px;
+  background-color: rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 9999px;
+  padding-left: 10px;
+  padding-right: 10px;
+  justify-content: space-between;
+  font-size: 2rem;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.nav-item {
+  cursor: pointer;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .container {
   display: flex;
   width: 100%;
@@ -32,6 +76,10 @@ body {
 }
 .search-field {
   justify-content: top;
+}
+
+.spacer {
+  height: 500px;
 }
 /* ---------hero-------- */
 .weather {
@@ -114,12 +162,25 @@ body {
   padding: 20px;
 }
 
+/* ---------Notify----------- */
+.notify {
+  height: 300px;
+  width: 100%;
+  max-width: 1340px;
+  padding: 20px;
+}
+
 /* ----------Mobile Devices----------- */
 @media only screen and (max-width: 768px) {
   .navbar h1 {
     font-size: 20px;
     font-weight: 300;
   }
+
+  .spacer {
+    height: 1px;
+  }
+
   #outlined-search {
     width: 40%;
   }
@@ -151,5 +212,25 @@ body {
   .card-right {
     width: calc(100% - 40px);
     height: 300px;
+  }
+
+  nav {
+    transform: translateX(-4.8rem);
+    transition: transform 0.5s ease-in-out;
+  }
+
+  nav:hover {
+    transform: translateX(0);
+  }
+}
+
+@media only screen and (max-width: 1524px) {
+  nav {
+    transform: translateX(-4.8rem);
+    transition: transform 0.5s ease-in-out;
+  }
+
+  nav:hover {
+    transform: translateX(0);
   }
 }
