--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -15,6 +15,7 @@ body {
 }
 /* ---------navigation---------- */
 .navbar {
+  margin-top: 50px;
   padding: 20px;
   padding-bottom: 0;
   display: flex;
@@ -172,11 +173,14 @@ nav {
 
 /* ----------Mobile Devices----------- */
 @media only screen and (max-width: 768px) {
+  .navbar {
+    margin-top: 1px;
+  }
+
   .navbar h1 {
     font-size: 20px;
     font-weight: 300;
   }
-
   .spacer {
     height: 1px;
   }
