--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -31,7 +31,10 @@ nav {
   height: 100%;
   overflow: hidden;
   z-index: 50;
+  transform: translateX(0rem);
+  transition: transform 0.5s ease-in-out;
 }
+
 .nav-item-wrapper {
   flex-grow: 1;
   display: flex;
