feat: adjust spline design to span webapp

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -23,7 +23,21 @@ body {
   flex-direction: column;
   align-items: center;
 }
+.App {
+  /* This ensures the SVG will cover the entire screen */
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
 
+.svg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1; /* This places it behind other content */
+}
 nav {
   position: fixed;
   display: flex;
