--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -24,7 +24,6 @@ body {
   align-items: center;
 }
 .App {
-  /* This ensures the SVG will cover the entire screen */
   position: relative;
   width: 100%;
   height: 100%;
@@ -37,7 +36,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: -1; /* This places it behind other content */
+  z-index: -1;
 }
 nav {
   position: fixed;
@@ -95,7 +94,8 @@ nav {
   margin-top: 20px;
 }
 .search-field {
-  justify-content: top;
+  display: flex;
+  justify-content: end;
 }
 
 .spacer {
