--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -95,7 +95,7 @@ nav {
 }
 .search-field {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 .spacer {
@@ -206,7 +206,8 @@ nav {
   }
 
   .navbar h1 {
-    font-size: 20px;
+    font-size: 24px;
+    margin-bottom: 6px;
     font-weight: 300;
   }
   .spacer {
