--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -123,6 +123,8 @@ nav {
   padding: 20px;
 }
 .hero-card {
+  display: flex;
+  flex-direction: column;
   width: 100%;
   height: 100%;
   background: rgba(174, 173, 173, 0.08);
@@ -135,6 +137,19 @@ nav {
 .hero-card h1 {
   margin: 0;
   padding: 20px;
+  max-width: 300px;
+  max-height: 100px;
+}
+.hero-sun-time {
+  margin-left: 24px;
+  gap: 6px;
+}
+
+.hero-sun-time > h2 {
+  display: flex;
+  align-items: center;
+  justify-self: flex-end;
+  gap: 6px;
 }
 
 /* -----------forecast---------- */
