--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -124,7 +124,7 @@ nav {
 }
 .hero-card {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   width: 100%;
   height: 100%;
   background: rgba(174, 173, 173, 0.08);
@@ -134,6 +134,32 @@ nav {
   border: 1px solid rgba(174, 173, 173, 0.3);
   border-radius: 25px;
 }
+
+.hero-container-1 {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  height: 100%;
+}
+
+.hero-container-2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  width: 50%;
+  height: 100%;
+  margin-top: 30px;
+}
+
+.hero-container-2 > div > img {
+  width: 200px;
+}
+.hero-container-2 > div > h1 {
+  margin-top: -60px;
+  margin-left: -40px;
+}
+
 .hero-card h1 {
   margin: 0;
   padding: 20px;
@@ -149,6 +175,13 @@ nav {
   display: flex;
   align-items: center;
   justify-self: flex-end;
+  gap: 6px;
+}
+.hero-low-high {
+  display: flex;
+  flex-direction: row;
+  margin-top: 18px;
+  margin-left: 24px;
   gap: 6px;
 }
 
