--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -139,7 +139,9 @@ nav {
   display: flex;
   flex-direction: column;
   width: 50%;
+  min-width: 200px;
   height: 100%;
+  margin: 18px;
 }
 
 .hero-container-2 {
@@ -149,24 +151,26 @@ nav {
   align-items: center;
   width: 50%;
   height: 100%;
-  margin-top: 30px;
+  margin-top: 10px;
 }
 
 .hero-container-2 > div > img {
   width: 200px;
 }
-.hero-container-2 > div > h1 {
-  margin-top: -60px;
+.hero-container-2 > div > div {
+  margin-top: -40px;
   margin-left: -40px;
 }
 
 .hero-card h1 {
-  margin: 0;
-  padding: 20px;
+  margin-bottom: 8px;
   max-width: 300px;
   max-height: 100px;
 }
 .hero-sun-time {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
   margin-left: 24px;
   gap: 6px;
 }
@@ -176,6 +180,7 @@ nav {
   align-items: center;
   justify-self: flex-end;
   gap: 6px;
+  padding-right: 12px;
 }
 .hero-low-high {
   display: flex;
@@ -183,6 +188,11 @@ nav {
   margin-top: 18px;
   margin-left: 24px;
   gap: 6px;
+  flex-wrap: wrap;
+}
+
+.hero-low-high {
+  padding-right: 30px;
 }
 
 /* -----------forecast---------- */
@@ -270,6 +280,7 @@ nav {
   .hero {
     padding: 10px 20px;
   }
+
   .forecast {
     display: flex;
     flex-direction: column;
