--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -183,7 +183,6 @@ nav {
 /* -----------forecast---------- */
 .forecast {
   display: flex;
-  flex-direction: row;
   height: 350px;
   flex-direction: row;
   width: 100%;
@@ -213,6 +212,7 @@ nav {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
   gap: 20px;
   height: 350px;
   width: 55%;
@@ -238,15 +238,30 @@ nav {
 .card-left-2 {
   display: flex;
   padding: 20px;
-  height: 100%;
+  height: 40%;
   flex-direction: row;
-  background: hsla(203, 41%, 47%, 0.911);
+  background: hsla(203, 42%, 41%, 0.911);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   -webkit-backdrop-filter: blur(2.4px);
   border: 1px solid rgba(174, 173, 173, 0.3);
   border-radius: 25px;
 }
+.daily-rain-left {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+  width: 50%;
+}
+.daily-rain-right {
+  width: 50%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-end;
+}
+
 .card-right {
   padding: 20px;
   height: calc(100% - 40px);
@@ -329,11 +344,11 @@ nav {
     flex-direction: column;
     justify-content: space-between;
     gap: 20px;
-    height: 560px;
+    height: 620px;
     padding: 10px 20px;
   }
   .forecast-left {
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
     gap: 20px;
     height: 100%;
@@ -343,7 +358,7 @@ nav {
   }
   .forecast-right {
     flex-direction: column;
-    height: 100%;
+    height: 55%;
     width: 100%;
   }
   .card-left {
