--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -223,6 +223,34 @@ nav {
   height: 350px;
   width: 100%;
 }
+
+.forecast-graph {
+  width: 100%;
+  height: 50%;
+}
+
+.forecast-week {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
+  height: 50%;
+  margin: 0px 12px;
+}
+
+.forecast-week > div {
+  height: 100%;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.forecast-week > div > p {
+  color: black;
+}
+
 .card-left-1 {
   display: flex;
   padding: 20px;
@@ -263,6 +291,10 @@ nav {
 }
 
 .card-right {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   padding: 20px;
   height: calc(100% - 40px);
   width: 100%;
