--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -183,7 +183,7 @@ nav {
 /* -----------forecast---------- */
 .forecast {
   display: flex;
-  height: 350px;
+  height: 800px;
   flex-direction: row;
   width: 100%;
   max-width: 1340px;
@@ -227,8 +227,15 @@ nav {
 .forecast-graph {
   width: 100%;
   height: 50%;
+  overflow-x: scroll;
 }
 
+.forecast-graph > div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
 .forecast-week {
   display: flex;
   align-items: center;
