feat: implement seven day forecast, rework hero
This commit implements the weather API into the forecast component,
showing the weather and temperature conditions for the next 7 days. To
make this work, the API requests needed to be changed, forcing a rework
in the hero component. There could be some simplification added to these
components to achieve a more DRY page.

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -276,6 +276,10 @@ nav {
   color: black;
   margin-top: 10px;
 }
+
+.forecast-week-column > div > img {
+  width: 35px;
+}
 .card-left-1 {
   display: flex;
   padding: 20px;
