fix: news learn button styling

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -410,12 +410,15 @@ nav {
   font-size: 25px;
   font-weight: 600;
   height: 80px;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 .article-description {
   height: 130px;
   display: -webkit-box;
-  max-width: 200px;
-  -webkit-line-clamp: 5;
+  -webkit-line-clamp: 6;
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
