feat: add notify spline, adjust styling

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -461,6 +461,7 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 50px;
   /* margin-right: 100px; */
   height: 1000px;
   width: 100%;
@@ -484,11 +485,29 @@ nav {
   border-radius: 25px;
 }
 
+.notify-clock {
+  margin-top: -300px;
+  margin-right: -120px;
+  width: 500px;
+  height: 350px;
+  z-index: -1;
+}
+
 .notify-title {
   display: flex;
+  max-width: 200px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+.notify-title-2 {
+  margin-top: 135px;
+  margin-right: -50px;
+  display: flex;
+  max-width: 200px;
+  flex-direction: column;
+  justify-content: center;
+  align-self: flex-start;
 }
 .notify-title {
   color: rgba(0, 0, 0, 0.849);
@@ -506,6 +525,7 @@ nav {
     width: 100%;
     max-width: 1340px;
     padding: 20px;
+    margin-top: 200px;
   }
 
   .navbar h1 {
@@ -513,7 +533,15 @@ nav {
     margin-bottom: 6px;
     font-weight: 300;
   }
-
+  .notify-title-2 {
+    margin-top: 135px;
+    margin-right: -50px;
+    display: none;
+    max-width: 200px;
+    flex-direction: column;
+    justify-content: center;
+    align-self: flex-start;
+  }
   .svg {
     display: none;
   }
