--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -237,16 +237,23 @@ nav {
 }
 
 .forecast-graph {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   width: 100%;
   height: 60%;
+  gap: 10px;
 }
 
 .forecast-graph > div {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
   width: 100%;
 }
+
 .forecast-week {
   display: flex;
   align-items: center;
